# Dictionary

./: .gitignore  CMakeLists.txt  README.md
html/: dict.html  get_word.html
inc/: connection.hpp  http_headers.hpp  parse_json_dictionary.h  read_functions.h  request_parser.hpp  response.hpp  server.hpp  session.hpp  structs.hpp
src/: client.cpp  connection.cpp  http_headers.cpp  main.cpp  parse_json_dictionary.cpp  parse_json_dictionary.h  read_functions.cpp  reply.cpp  request_parser.cpp  response.cpp  server.cpp  session.cpp
